Fixed top image being the wrong size

--- a/LSPatchNotes/stylesheet.css
+++ b/LSPatchNotes/stylesheet.css
@@ -27,7 +27,7 @@ h1,h2,h3
 {
     top: 20%;
     margin: auto;
-    width: 100%;
+    width: 95%;
     animation: fadein 1.5s;
 }
 
